Restructure common ui classes.